@@ -429,20 +429,38 @@ nested Tcl list.</desc>
       </commanddef>
 
       <commanddef>
-        <command><method>asXML</method> <option>?-indent none/1..8?</option>
-<option>?-channel channelId?</option> <option>?-escapeNonASCII?</option><option>?-escapeAllQuot?</option> <option>?-indentAttrs?</option></command>
+        <command><method>asXML</method> <option>?-indent none/1..8?</option> <option>?-channel channelId?</option> <option>?-escapeNonASCII?</option> <option>-xmlDeclaration &lt;boolean&gt;?</option> <option>-encString &lt;string&gt;</option> <option>?-escapeAllQuot?</option> <option>?-indentAttrs?</option></command>
+        <desc><p>Returns the DOM substree starting from the current
+        node as the root node of the result as an (optional indented)
+        XML string or sends the output directly to the given
+        channelId.</p>
 
-        <desc>Returns the DOM substree starting from the current node
-as the root node of the result as an (optional indented) XML string or
-sends the output directly to the given channelId. If the option
-<m>-escapeNonASCII</m> is given, every non 7 bit ASCII character in
-attribute values or element PCDATA content will be escaped as
-character reference in decimal representation. If the option
-<m>-escapeAllQuot</m> is given, quotation marks will be escaped with
-&amp;quot; even in text content of elements.  If the option
-<m>-indentAttrs</m> is given, then attributes will each be separated 
-with newlines and indented to the same level as the parent node plus
-        the value given as argument to <m>-indentAttrs</m> (0..8).</desc>
+        <p>If the option <m>-escapeNonASCII</m> is given,
+        every non 7 bit ASCII character in attribute values or element
+        PCDATA content will be escaped as character reference in
+        decimal representation.</p>
+
+        <p>The flag <m>-xmlDeclaration</m> determines, whether there
+        will be an XML Declaration and a newline emitted before
+        anything else. The default is, to do not. If this flag is
+        given with a true argument then</p>
+
+        <p><m>-encString</m> sets the encoding value in the XML
+        Declaration. Otherwise, this option is ignored. Please note,
+        that this option just enhance the string representation of the
+        generated XML Declaration with an encoding information string,
+        nothing more. It's up to the user to handle encoding in case
+        of writing to a channel or reparsing.</p>
+            
+        <p>If the option <m>-escapeAllQuot</m> is given,
+        quotation marks will be escaped with &amp;quot; even in text
+        content of elements.</p>
+
+        <p>If the option <m>-indentAttrs</m> is
+        given, then attributes will each be separated with newlines
+        and indented to the same level as the parent node plus the
+        value given as argument to <m>-indentAttrs</m> (0..8).</p></desc>
+
       </commanddef>
 
       <commanddef>
